# Bierlijst

./: .env.dist  .gitignore  docker-compose.yml  newlogin.vue  oldlogin.vue  readme.md  test
backend/: backend.dockerfile  main.py  pyproject.toml
backend/src/api/: api.py
backend/src/api/endpoints/: item.py  login.py  people.py  person.py  transaction.py  user.py  users.py
backend/src/db/crud/: __init__.py  base.py  crud_item.py  crud_people.py  crud_person.py  crud_transaction.py  crud_user.py
backend/src/schemas/: __init__.py  item.py  people.py  person.py  transaction.py  user.py
backend/src/utils/: config.py  misc.py  security.py  user_auth.py
ember_bierlijst/: README.md  jsconfig.json  package-lock.json  package.json
ember_bierlijst/app/: app.js  index.html  router.js
ember_bierlijst/app/components/: counter.js
ember_bierlijst/app/templates/: application.hbs  login.hbs  main.hbs
ember_bierlijst/config/: environment.js
ember_bierlijst/tests/: index.html  test-helper.js
emberjs_frontend/: README.md  ember-cli-build.js  package-lock.json  package.json
emberjs_frontend/app/: app.js  index.html  router.js
emberjs_frontend/app/templates/: application.hbs  main.hbs
emberjs_frontend/config/: environment.js
emberjs_frontend/tests/: index.html  test-helper.js
frontend/: .ember-cli  .eslintrc.js  .prettierrc.js  ember-cli-build.js  env.ts  package-lock.json  package.json  tsconfig.json  tslint.json
frontend/app/: index.html  router.js
frontend/config/: environment.js
frontend/public/: index.html
frontend/src/: App.vue  main.ts
(+127 files in other folders)
